GitOps/policies/base/gatekeeper/constraints/disallow-privileged-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowPrivileged
metadata:
  name: disallow-privileged-containers
spec:
  match:
    excludedNamespaces:
      - kube-system
      - flux-system
      - gatekeeper-system
      - local-path-storage
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
