GitOps/policies/base/gatekeeper/constraints/disallow-privileged-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged

        workload_containers[container] {
          container := input.review.object.spec.containers[_]
        }

        workload_containers[container] {
          container := input.review.object.spec.initContainers[_]
        }

        violation[{"msg": msg, "details": {"container": container.name}}] {
          input.review.kind.kind == "Pod"
          container := workload_containers[_]
          container.securityContext.privileged == true
          namespace := object.get(input.review.object.metadata, "namespace", "default")
          msg := sprintf("privileged container %q is not allowed in namespace %q", [container.name, namespace])
        }
