GitOps/policies/base/gatekeeper/constraints/namespace-required-labels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNamespaceLabels
metadata:
  name: namespace-required-labels
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
  parameters:
    labels:
      - app.kubernetes.io/part-of
      - platform.s34nj0hn.dev/owner
      - platform.s34nj0hn.dev/purpose
    exemptNamespaces:
      - kube-system
      - flux-system
      - gatekeeper-system
      - default
      - local-path-storage
